--- a/ImageEdit/Plugin.ImageEdit.iOS/Plugin.ImageEdit.iOS.csproj
+++ b/ImageEdit/Plugin.ImageEdit.iOS/Plugin.ImageEdit.iOS.csproj
@@ -33,6 +33,7 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
     <DocumentationFile>bin\iPhone\Release\Plugin.ImageEdit.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\Plugin.ImageEdit\CrossImageEdit.cs">
