--- a/Tests/ImageEditTests/Droid/ImageEditTests.Droid.csproj
+++ b/Tests/ImageEditTests/Droid/ImageEditTests.Droid.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>ImageEditTests.Droid</RootNamespace>
     <AssemblyName>ImageEditTests.Droid</AssemblyName>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -125,6 +125,9 @@
     <AndroidResource Include="Resources\drawable\pattern1.png" />
     <AndroidResource Include="Resources\drawable\patternjpg.jpg" />
     <AndroidResource Include="Resources\drawable\shrinking.png" />
+    <AndroidResource Include="Resources\drawable\colors.png" />
+    <AndroidResource Include="Resources\drawable\recth.png" />
+    <AndroidResource Include="Resources\drawable\rectv.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\ImageEdit\Plugin.ImageEdit.Abstractions\Plugin.ImageEdit.Abstractions.csproj">
