--- a/ImageEdit/Plugin.ImageEdit.Abstractions/Plugin.ImageEdit.Abstractions.csproj
+++ b/ImageEdit/Plugin.ImageEdit.Abstractions/Plugin.ImageEdit.Abstractions.csproj
@@ -41,6 +41,7 @@
     <Compile Include="IImageEdit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IEditableImage.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
