--- a/Sample/Sample.iOS/packages.config
+++ b/Sample/Sample.iOS/packages.config
@@ -7,4 +7,5 @@
   <package id="Unity" version="4.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="xamarinios10" />
+  <package id="Xamarin.Plugin.ImageEdit" version="0.0.6-pre" targetFramework="xamarinios10" />
 </packages>
