--- a/ImageEdit/Plugin.ImageEdit.iOS/Plugin.ImageEdit.iOS.csproj
+++ b/ImageEdit/Plugin.ImageEdit.iOS/Plugin.ImageEdit.iOS.csproj
@@ -25,7 +25,8 @@
     <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\iPhone\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
