--- a/Tests/ImageEditTests/iOS/packages.config
+++ b/Tests/ImageEditTests/iOS/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.1.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.0.11" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="xamarinios10" />
@@ -46,13 +46,14 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="xamarinios10" />
-  <package id="xunit" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="xamarinios10" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.core" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.runner.devices" version="2.2.0" targetFramework="xamarinios10" />
-  <package id="xunit.runner.utility" version="2.2.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.3.0.912540" targetFramework="xamarinios10" />
+  <package id="xunit" version="2.4.0" targetFramework="xamarinios10" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="xamarinios10" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="xamarinios10" />
+  <package id="xunit.assert" version="2.4.0" targetFramework="xamarinios10" />
+  <package id="xunit.core" version="2.4.0" targetFramework="xamarinios10" />
+  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="xamarinios10" />
+  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="xamarinios10" />
+  <package id="xunit.runner.devices" version="2.4.48" targetFramework="xamarinios10" />
+  <package id="xunit.runner.utility" version="2.4.0" targetFramework="xamarinios10" />
 </packages>
