--- a/nuget/ImageEdit.Plugin.nuspec
+++ b/nuget/ImageEdit.Plugin.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>Xamarin.Plugin.ImageEdit</id>
-		<version>0.1.0</version>
+		<version>1.0.0</version>
 		<title>Image Edit Plugin for Xamarin</title>
 		<authors>kamu</authors>
 		<owners>kamu</owners>
@@ -16,114 +16,44 @@
          This plugin will enable you to manipulate(resize,crop,rotate,monochrome) a image(png,jpg).
 		</description>
 		<summary></summary>
-		<tags>PCL Plugin Xamarin.Forms Xamarin.Android Xamarin.iOS Image Edit Resize Rotate Crop Scale Clip Bitmap jpeg png monochrome</tags>
+		<tags>NETStandard PCL Plugin Xamarin.Forms Xamarin.Android Xamarin.iOS Image Edit Resize Rotate Crop Scale Clip Bitmap jpeg png monochrome</tags>
 		<language>en-US</language>
 		<releaseNotes>
-## Bugfix
-[iOS] ToJpeg quality parameter had been incorrect. (issue#6)
-
-## NewFeature
-GetNativeImage ... get platform image object. (issue#3)
-ToMonochrome ... Image color convert to monochrome.
-
-## Enhanced
-Create ... new override that specify stream.
-Resize ... new override that specify max length of long side.
+Support .NETStandard2.0
 		</releaseNotes>
-
-		<dependencies>
-			<group targetFramework="net">
-			</group>
-			<group targetFramework="win">
-			</group>
-			<group targetFramework="wp">
-			</group>
-			<group targetFramework="wpa">
-			</group>
-			<group targetFramework="MonoAndroid">
-			</group>
-			<group targetFramework="Xamarin.iOS10">
-			</group>
-			<group targetFramework="Xamarin.Mac20">
-			</group>
-			<group targetFramework="portable-net45+win+wpa81+wp80">
-			</group>
-			<group targetFramework="uap">
-			</group>
-			<group targetFramework="dotnet">
-			</group>
-		</dependencies>
 	</metadata>
 	<files>
-		<!--Core-->
-		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.dll" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.xml" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.xml" />
-		<!--<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.pdb" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.pdb" />-->
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.xml" />
-		<!--<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.pdb" />-->
+		<!-- .net standard 2.0 -->
+        <file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.dll" target="lib/netstandard2.0" />
+        <file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.xml" target="lib/netstandard2.0" />
+        <file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.pdb" target="lib/netstandard2.0" />
+		
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.dll" target="lib/netstandard2.0" />
+        <file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.xml" target="lib/netstandard2.0" />
+        <file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.pdb" target="lib/netstandard2.0" />
 
-		<!--dotnet--><!--
-		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.dll" target="lib/dotnet/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.xml" target="lib/dotnet/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/Plugin.ImageEdit.pdb" target="lib/dotnet/Plugin.ImageEdit.pdb" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/dotnet/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/dotnet/Plugin.ImageEdit.Abstractions.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/dotnet/Plugin.ImageEdit.Abstractions.pdb" />-->
-
-		<!--Win Phone Silverlight--><!--
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone8/bin/Release/Plugin.ImageEdit.dll" target="lib/wp8/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone8/bin/Release/Plugin.ImageEdit.xml" target="lib/wp8/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone8/bin/Release/Plugin.ImageEdit.pdb" target="lib/wp8/Plugin.ImageEdit.pdb" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/wp8/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/wp8/Plugin.ImageEdit.Abstractions.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/wp8/Plugin.ImageEdit.Abstractions.pdb" />-->
-
-		<!--Win Phone 81--><!--
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone81/bin/Release/Plugin.ImageEdit.dll" target="lib/wpa81/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone81/bin/Release/Plugin.ImageEdit.xml" target="lib/wpa81/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsPhone81/bin/Release/Plugin.ImageEdit.pdb" target="lib/wpa81/Plugin.ImageEdit.pdb" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/wpa81/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/wpa81/Plugin.ImageEdit.Abstractions.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/wpa81/Plugin.ImageEdit.Abstractions.pdb" />-->
-
-		<!--WinStore--><!--
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsStore/bin/Release/Plugin.ImageEdit.dll" target="lib/win8/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsStore/bin/Release/Plugin.ImageEdit.xml" target="lib/win8/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.WindowsStore/bin/Release/Plugin.ImageEdit.pdb" target="lib/win8/Plugin.ImageEdit.pdb" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/win8/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/win8/Plugin.ImageEdit.Abstractions.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/win8/Plugin.ImageEdit.Abstractions.pdb" />
-		-->
+		<!--PCL-->
+		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.dll" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.dll" />
+		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.xml" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.xml" />
+		<file src="../ImageEdit/Plugin.ImageEdit/bin/Release/netstandard2.0/Plugin.ImageEdit.pdb" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.pdb" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.dll" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.dll" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.xml" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.xml" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.pdb" target="lib/portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/Plugin.ImageEdit.Abstractions.pdb" />
 
 		<!--Xamarin.Android-->
 		<file src="../ImageEdit/Plugin.ImageEdit.Android/bin/Release/Plugin.ImageEdit.dll" target="lib/MonoAndroid10/Plugin.ImageEdit.dll" />
 		<file src="../ImageEdit/Plugin.ImageEdit.Android/bin/Release/Plugin.ImageEdit.xml" target="lib/MonoAndroid10/Plugin.ImageEdit.xml" />
-		<!--<file src="../ImageEdit/Plugin.ImageEdit.Android/bin/Release/Plugin.ImageEdit.pdb" target="lib/MonoAndroid10/Plugin.ImageEdit.pdb" />-->
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.xml" />
-		<!--<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.pdb" />-->
+		<file src="../ImageEdit/Plugin.ImageEdit.Android/bin/Release/Plugin.ImageEdit.pdb" target="lib/MonoAndroid10/Plugin.ImageEdit.pdb" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.dll" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.dll" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.xml" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.xml" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.pdb" target="lib/MonoAndroid10/Plugin.ImageEdit.Abstractions.pdb" />
 
 		<!--Xamarin.iOS-->
 		<file src="../ImageEdit/Plugin.ImageEdit.iOS/bin/iPhone/Release/Plugin.ImageEdit.dll" target="lib/Xamarin.iOS10/Plugin.ImageEdit.dll" />
 		<file src="../ImageEdit/Plugin.ImageEdit.iOS/bin/iPhone/Release/Plugin.ImageEdit.xml" target="lib/Xamarin.iOS10/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/Xamarin.iOS10/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/Xamarin.iOS10/Plugin.ImageEdit.Abstractions.xml" />
-
-		<!--uap--><!--
-		<file src="../ImageEdit/Plugin.ImageEdit.UWP/bin/Release/Plugin.ImageEdit.dll" target="lib/UAP10/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.UWP/bin/Release/Plugin.ImageEdit.xml" target="lib/UAP10/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.UWP/bin/Release/Plugin.ImageEdit.pdb" target="lib/UAP10/Plugin.ImageEdit.pdb" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/UAP10/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/UAP10/Plugin.ImageEdit.Abstractions.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.pdb" target="lib/UAP10/Plugin.ImageEdit.Abstractions.pdb" />
-		-->
-
-		<!--Xamarin.Mac
-		<file src="../ImageEdit/Plugin.ImageEdit.Mac/bin/iPhone/Release/Plugin.ImageEdit.dll" target="lib/Xamarin.Mac20/Plugin.ImageEdit.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Mac/bin/iPhone/Release/Plugin.ImageEdit.xml" target="lib/Xamarin.Mac20/Plugin.ImageEdit.xml" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.dll" target="lib/Xamarin.Mac20/Plugin.ImageEdit.Abstractions.dll" />
-		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/Plugin.ImageEdit.Abstractions.xml" target="lib/Xamarin.Mac20/Plugin.ImageEdit.Abstractions.xml" />
-        -->
+		<file src="../ImageEdit/Plugin.ImageEdit.iOS/bin/iPhone/Release/Plugin.ImageEdit.xml" target="lib/Xamarin.iOS10/Plugin.ImageEdit.pdb" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.dll" target="lib/Xamarin.iOS10/Plugin.ImageEdit.Abstractions.dll" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.xml" target="lib/Xamarin.iOS10/Plugin.ImageEdit.Abstractions.xml" />
+		<file src="../ImageEdit/Plugin.ImageEdit.Abstractions/bin/Release/netstandard2.0/Plugin.ImageEdit.Abstractions.xml" target="lib/Xamarin.iOS10/Plugin.ImageEdit.Abstractions.pdb" />
 	</files>
 </package>
